[package]
name = "imgui-memory-editor"
version = "0.2.1"
authors = ["Akash Munagala <akash.munagala@gmail.com>"]
edition = "2018"
description = "Rust bindings for imgui memory editor"
readme = "README.md"
homepage = "https://github.com/Ace314159/imgui-memory-editor-rs"
repository = "https://github.com/Ace314159/imgui-memory-editor-rs"
license = "MIT/Apache-2.0"
keywords = ["imgui", "memory", "editor"]
categories = ["gui", "api-bindings"]

[dependencies]
imgui = "0.7.0"
imgui-memory-editor-sys = { path = "imgui-memory-editor-sys", version = "0.2.0" }
