[package]
name = "imgui-memory-editor-sys"
version = "0.1.1"
authors = ["Akash Munagala <akash.munagala@gmail.com>"]
edition = "2018"
description = "Raw FFI bindings to imgui memory editor"
repository = "https://github.com/Ace314159/imgui-memory-editor-rs"
categories = ["gui", "external-ffi-bindings"]
license = "MIT/Apache-2.0"

[dependencies]
cty = "0.2.1"
imgui-sys = "0.6.0"

[build-dependencies]
cc = "1.0.66"
