[package]
name = "imgui-memory-editor-sys"
version = "0.3.0"
authors = ["Akash Munagala <akash.munagala@gmail.com>"]
edition = "2018"
description = "Raw FFI bindings to imgui memory editor"
homepage = "https://github.com/Ace314159/imgui-memory-editor-rs"
repository = "https://github.com/Ace314159/imgui-memory-editor-rs"
license = "MIT/Apache-2.0"
categories = ["gui", "external-ffi-bindings"]
links = "imgui_memory_editor"

[dependencies]
cty = "0.2.1"
imgui-sys = "0.7.0"

[build-dependencies]
cc = "1.0.66"
